--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -25,7 +25,7 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'posts:all_posts'%}">All Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href=#>Add Post</a>
+                        <a class="nav-link active" aria-current="page" href={% url 'posts:post_create'%}>Add Post</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href=#>Liked</a>
