--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -1,1 +1,35 @@
 {% extends 'posts/base.html' %}
+{% block title %}Add Post: {% endblock title %}
+
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <form action="{% url 'posts:post_create'%}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form %}
+                <div class="row mb-3">
+
+                    {{field.label_tag}}
+                    {{field}}
+                    <div class="text-danger">
+                        {{field.errors}}
+                        {{ form.non_field_errors }}
+                    </div>
+                    {% if field.help_text %}
+                    <p class="help">{{ field.help_text|safe }}</p>
+                    {% endif %}
+                </div>
+                {% endfor %}
+
+                <div class="form-row mt-3">
+                    <button type="submit" class="btn btn-primary">
+                        Add Post
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+{% endblock body %}
