--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -7,19 +7,21 @@ Only Admins can see this
 
 <div class="container">
     <div class="col-md-9">
-        <div class="row">
+        <div class="row ">
             {% for post in posts %}
-            <div class="col-md-3">
-                <div class="card">
+            <div class="col-md-4">
+                <div class="card" style='height: 25rem;'>
                     {% if post.image  %}
                     <img src="{{post.image.url}}" class="card-img-top" />
                     {% endif %}
 
                     <div class="card-body">
-                        <p class="card-title">
-                            <b>{{post.workout}}
-                            </b>
-                        </p>
+                        <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
+                            <p class="text-capitalize">
+                                {{post.workout}}
+
+                            </p>
+                        </a>
 
                         <a class="card-link btn btn-primary" href=#>Comment</a>
                         <br><br>
