--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -8,11 +9,11 @@
     <title>Fitspogram</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-   <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'posts/main.css' %}" />
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+    <nav class=" navbar navbar-expand-lg navbar-light bg-light mb-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'posts:all_posts'%}">Fitspogram</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
