--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -9,7 +9,7 @@
     <title>Fitspogram</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'posts/main.css' %}" />
+    <link rel="stylesheet" href="{% static 'posts/posts.css' %}" />
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href='/logout'>Logout</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'accounts:logout'%}">Logout</a>
                     </li>
                 </ul>
             </div>
