--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <title>Fitspogram</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'accounts/accounts.css' %}" />
 </head>
 
 <body>
@@ -24,28 +26,30 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'posts:all_posts'%}">All Posts</a>
                     </li>
-                    <li class="nav-item">
+                    {% comment %} <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href={% url 'posts:post_create'%}>Add Post</a>
-                    </li>
+                    </li> {% endcomment %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href=#>Liked</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href='/logout'>Logout</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'accounts:logout'%}">Logout</a>
                     </li>
                 </ul>
             </div>
 
         </div>
     </nav>
+    {% block body %} {% endblock body %}
     {% if messages %}
     {% for message in message %}
     <div> {{message}}</div>
     {% endfor %}
     {% endif %}
-    <h1>Auth Details</h1>
     {% block content %}{% endblock content %}
+    {% block scripts %}{% endblock scripts %}
+
 </body>
 
 </html>
