--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,19 +1,10 @@
 {% extends 'accounts/base.html' %}
 
 {% block content %}
-<h1> Django form </h1>
-
-{% comment %} for django built in form {% endcomment %}
-{% comment %} <form action="" method="post">
-    {{form}}
-    <button type="submit">Create User</button>
-</form> {% endcomment %}
-
 
 <hr />
-<h1>Custom Registration Form</h1>
-<div class="container">
-
+<h1>Register Here</h1>
+<div class="reg-container">
     <form action="" method="post">
         {% csrf_token %}
         <div class="row">
@@ -46,9 +37,8 @@
                 <label>Password confirm</label>
                 <input type="password" class="form-control" name="password_confirm"></div>
         </div>
-
+        <br />
         <button class="btn btn-primary">Register</button>
     </form>
 
-</div>
-{% endblock content %}
+</div>{% endblock content %}
