--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -11,11 +11,13 @@ Only Admins can see this
             {% for post in posts %}
             <div class="col-md-4">
                 <div class="card" style='height: 25rem;'>
+                    {{post.name}}
                     {% if post.image  %}
                     <img src="{{post.image.url}}" class="card-img-top" />
                     {% endif %}
 
                     <div class="card-body">
+
                         <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
                             <p class="text-capitalize">
                                 {{post.workout}}
