--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -23,18 +23,23 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'posts:all_posts'%}">All Posts</a>
-                    </li>
-                    {% comment %} <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href={% url 'posts:post_create'%}>Add Post</a>
-                    </li> {% endcomment %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href=#>Liked</a>
-                    </li>
+
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'accounts:logout'%}">Logout</a>
+                        {% if user.is_authenticated %}
+                        <a class="nav-link active" aria-current="page" href=#> {{ user.get_username }}</a></li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                            href="{% url 'accounts:logout'%}?next={{request.path}}">Logout</a></li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                            href="{% url 'accounts:login'%}?next={{request.path}}">Login</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                            href="{% url 'accounts:register'%}?next={{request.path}}">Register</a></li>
+                    {% endif %}
                     </li>
                 </ul>
             </div>
