--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -34,7 +34,17 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'accounts:logout'%}">Logout</a>
+                        {% if user.is_authenticated %}
+                        <a class="nav-link active" aria-current="page" href=#> {{ user.get_username }}</a></li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                            href="{% url 'accounts:logout'%}?next={{request.path}}">Logout</a></li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                            href="{% url 'accounts:login'%}?next={{request.path}}">Login</a></li>
+                    {% endif %}
                     </li>
                 </ul>
             </div>
