--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
+
+body {
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: 18px;
+}
+
 .container {
     display: flex;
 }
@@ -26,20 +33,25 @@
 }
 
 .text-capitalize {
-    height: 80%;
+    height: 11em;
     width: 100%;
     margin-bottom: 0;
+    overflow: auto;
 }
 
 .date-text {
-    font-size: 9.5px;
+    font-size: 14px;
     text-align: end;
     margin-top: 0.5em;
-    margin-bottom: 1em;
+    margin-bottom: 0em;
 }
 
 .text-center {
     width: 100%;
     height: 40%;
-    /* margin-top: 5.8em; */
+}
+
+.username {
+    font-size: 14px;
+    margin-bottom: 0;
 }
