--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -1,1 +1,34 @@
 {% extends 'posts/base.html' %}
+
+{% block body %}
+{% if request.user.is_superuser %}
+Only Admins can see this
+{% endif %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+
+            <img src="{{post.image.url}}" class="show-image" />
+            <div class="workout-show">
+                {{post.workout}}
+            </div>
+
+
+            <a href="{% url 'posts:post_show' post.id %}?action=edit">Edit</a>
+            <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
+
+
+        </div>
+        {% if edit %}
+        <div class="col-md-6">
+            <form action="{% url 'posts:post_show' post.id %}?action=edit" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{form}}
+                <button>Edit Post</button>
+            </form>
+        </div>
+        {% endif %}
+    </div>
+</div>
+{% endblock body %}
