--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -27,7 +27,8 @@
 
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link active" aria-current="page" href=#> {{ user.get_username }}</a></li>
+                        <a class="nav-link active" aria-current="page" href={% url 'accounts:profile_show' user.id %}>
+                            {{ user.get_username }}</a></li>
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
