--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -23,9 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'posts:all_posts'%}">All Posts</a>
-                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href={% url 'posts:post_create'%}>Add Post</a>
                     </li>
@@ -35,7 +33,8 @@
 
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link active" aria-current="page" href=#> {{ user.get_username }}</a></li>
+                        <a class="nav-link active" aria-current="page" href="{% url 'accounts:profile_show' user.id %}">
+                            {{ user.get_username }}</a></li>
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
