--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -27,12 +27,13 @@
 
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link active" aria-current="page" href={% url 'accounts:profile_show' user.id %}>
+                        {% comment %} <a class="nav-link active" aria-current="page"
+                            href={% url 'accounts:profile_show' user.id %}>
                             {{ user.get_username }}</a></li>
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
-                            href="{% url 'accounts:logout'%}?next={{request.path}}">Logout</a></li>
+                            href="{% url 'accounts:logout'%}?next={{request.path}}">Logout</a></li> {% endcomment %}
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
