updated superuser view

--- a/posts/templates/posts/others.html
+++ b/posts/templates/posts/others.html
@@ -14,7 +14,9 @@
 
 
 
-
+            {% if request.user.is_superuser %}
+            <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
+            {% endif %}
 
         </div>
         {% if edit %}
