--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -20,7 +20,7 @@
 
                             </p>
                         </a>
-                        <p class="date-text">Posted On: {{post.created_at|date:'d M Y' }}</p>
+                        <p class="date-text"> {{post.created_at|date:'d M Y' }}</p>
                         <div class="text-center">
                             <a class="btn btn-primary btn-sm" href=#>Comment</a>
 
