--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -33,7 +33,7 @@
 
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link active" aria-current="page" href="{% url 'accounts:profile_show' user.id %}">
+                        <a class="nav-link active" aria-current="page" href="{% url 'accounts:profile_show'  %}">
                             {{ user.get_username }}</a></li>
 
                     <li class="nav-item">
