--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,9 +1,17 @@
 {% extends 'posts/base.html' %}
 
-{% block body %}<div class="container">
+{% block body %}
+<div class="text-center">
+    <h1> {{user.username}} </h1>
+</div>
+
+<div class="container">
+
     <div class="col-md-9">
         <div class="row ">
+
             {% for post in posts %}
+
             <div class="col-md-4">
                 <div class="card">
 
