--- a/posts/templates/posts/others.html
+++ b/posts/templates/posts/others.html
@@ -1,7 +1,9 @@
 {% extends 'posts/base.html' %}
 
 {% block body %}
-
+<div class="text-center">
+    <h1> {{post.name}} </h1>
+</div>
 
 <div class="container">
     <div class="row">
