--- a/accounts/static/accounts/accounts.css
+++ b/accounts/static/accounts/accounts.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
+
+body {
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: 18px;
+}
+
 .login-container {
     width: 50%;
+    margin: auto;
+    padding: 10px;
 }
 
 .reg-container {
-    width: 80%;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
 }
