--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,14 +8,14 @@
         <div class="login-row">
             <div class="col-md-12">
                 <label>Username</label>
-                <input type="text" class="form-control" name="username">
+                <input type="text" class="form-control" name="username" required>
             </div>
         </div>
 
         <div class="login-row">
             <div class="col-md-12">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password">
+                <input type="password" class="form-control" name="password" required>
             </div>
             <br />
             <div>
