--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -10,32 +10,32 @@
         <div class="row">
             <div class="col-md-6">
                 <label>First Name</label>
-                <input type="text" class="form-control" name="first_name">
+                <input type="text" class="form-control" name="first_name" required>
             </div>
             <div class="col-md-6">
                 <label>Last Name</label>
-                <input type="text" class="form-control" name="last_name"></div>
+                <input type="text" class="form-control" name="last_name" required></div>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <label>Email</label>
-                <input type="text" class="form-control" name="email">
+                <input type="text" class="form-control" name="email" required>
             </div>
             <div class="col-md-6">
                 <label>Username</label>
-                <input type="text" class="form-control" name="username">
+                <input type="text" class="form-control" name="username" required>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-6">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password">
+                <input type="password" class="form-control" name="password" required>
             </div>
 
             <div class="col-md-6">
                 <label>Password confirm</label>
-                <input type="password" class="form-control" name="password_confirm"></div>
+                <input type="password" class="form-control" name="password_confirm" required></div>
         </div>
         <br />
         <button class="btn btn-primary">Register</button>
