--- a/accounts/static/accounts/accounts.css
+++ b/accounts/static/accounts/accounts.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .login-container {
@@ -15,4 +15,9 @@ body {
     margin: auto;
     width: 50%;
     padding: 10px;
+}
+
+.reg-title,
+.login-title {
+    text-align: center;
 }
