--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,10 @@
 {% extends 'accounts/base.html' %}
 
 {% block content %}
+<div class="login-title">
+    <h1>Login</h1>
+</div>
+
 <div class="login-container">
     <form action="" method="post">
         {% csrf_token %}
@@ -11,7 +15,7 @@
                 <input type="text" class="form-control" name="username" required>
             </div>
         </div>
-
+        <br />
         <div class="login-row">
             <div class="col-md-12">
                 <label>Password</label>
