only admin can delete - fixed

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -17,7 +17,7 @@
 
 
                     {% if post.image  %}
-                    <img src="{{post.image.url}}" class="card-img-top" />
+                    <img src="{{post.image.url}}" class="index-image" />
                     {% endif %}
 
                     <div class="card-body">
