--- a/posts/templates/posts/edit.html
+++ b/posts/templates/posts/edit.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-md-6">
 
-            <img src="{{post.image.url}}" class="show-image" />
+            <img src="{{post.image.url}}" class="index-image" />
             <div class="workout-show">
                 {{post.workout}}
             </div>
