--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -5,25 +5,23 @@
     <h1> {{post.name}} </h1>
 </div>
 
-
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-9">
 
-            <img src="{{post.image.url}}" class="show-image" />
+            <img src="{{post.image.url}}" class="index-image" />
             <div class="workout-show">
                 {{post.workout}}
             </div>
             <a href="{% url 'posts:post_edit' post.id %}?action=edit">Edit</a>
-            {% if request.user.is_superuser %}
-            <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
-            {% endif %}
+
             <br />
             <div class="comment-container">
                 this is the comments section
                 <br />
                 insert comments here
-
+                <br />
+                show.html
             </div>
 
         </div>
