--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -14,7 +14,9 @@
                 {{post.workout}}
             </div>
             <a href="{% url 'posts:post_edit' post.id %}?action=edit">Edit</a>
-
+            {% if request.user.is_superuser %}
+            <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
+            {% endif %}
             <br />
             <div class="comment-container">
                 this is the comments section
