--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -32,7 +32,8 @@ Only Admins can see this
                         </a>
                         <p class="date-text"> {{post.created_at|date:'d M Y' }}</p>
                         <div class="text-center">
-                            <a class="btn btn-primary btn-sm" href=#>Comment</a>
+                            <a class="btn btn-primary btn-sm"
+                                href="{% url 'posts:comment_create' post.id %}">Comment</a>
 
                             <a class="card-link btn btn-primary btn-sm" href=#>&#9829;</a>
                         </div>
