--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -2,13 +2,13 @@
 
 {% block body %}
 <div class="text-center">
+    SHOW.HTML
     <h1> {{post.name}} </h1>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-
             <img src="{{post.image.url}}" class="index-image" />
             <div class="workout-show">
                 {{post.workout}}
@@ -18,22 +18,27 @@
             <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
             {% endif %}
             <br />
-
-
         </div>
-        <div class="col-md-4">
-            <div class="comment-container">
-                this is the comments section
-                <br />
-                insert comments here
-                <br />
-                show.html
-            </div>
 
+        <div class="col-md-4">
+            {% for comment in comments %}
+
+            <p class="comment-text">
+                COMMENT: {{comment.comment}}
+            </p>
+            <p class="commenter">USER:
+                {{comment.name}}
+            </p>
+            <br />
+            {% endfor %}
             <a class="nav-link active" aria-current="page" href="{% url 'posts:comment_create' post.id %}">
                 <p class='comment'>comment</p>
             </a>
         </div>
 
+
     </div>
-    {% endblock body %}
+
+
+</div>
+{% endblock body %}
