--- a/posts/templates/posts/others.html
+++ b/posts/templates/posts/others.html
@@ -2,7 +2,10 @@
 
 {% block body %}
 <div class="text-center">
-    <h1> {{post.name}} </h1>
+    <a class="nav-link active" aria-current="page" href="{% url 'accounts:other_profile_show' user_id=post.name_id %}">
+        <p class='username'>{{post.name}}</p>
+
+    </a>
 </div>
 
 <div class="container">
