--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -54,8 +54,14 @@ body {
 }
 
 .username {
-    font-size: 14px;
     margin-bottom: 0;
+    font-size: 20px;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(24, 62, 131);
 }
 
 .show-image {
