--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -28,6 +28,7 @@ body {
 
 .row {
     width: 100%;
+    justify-content: space-evenly;
 }
 
 .card {
@@ -67,4 +68,15 @@ a {
 .show-image {
     height: 100px;
     object-fit: fill;
+}
+
+.col-md-8.comments,
+.col-md-4.comments {
+    background-color: rgb(212, 246, 255);
+    height: 500px;
+    overflow: auto;
+}
+
+#commenter {
+    color: rgb(55, 81, 194);
 }
