add logo, update layout

--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -15,7 +15,9 @@
 <body>
     <nav class=" navbar navbar-expand-lg navbar-light bg-light mb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'posts:all_posts'%}">Fitspogram</a>
+            <a class="navbar-brand" href="{% url 'posts:all_posts'%}">Fitspogram
+                <img src="http://www.clker.com/cliparts/B/9/N/q/L/s/exercise-with-dumbbells-symbol-md.png" class='logo'
+                    alt=""> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
