--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -14,16 +14,22 @@
             <div class="workout-show">
                 {{post.workout}}
             </div>
-            <a href="{% url 'posts:post_edit' post.id %}?action=edit">Edit</a>
-            {% if request.user.is_superuser %}
-            <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
-            {% endif %}
-            <br />
-        </div>
 
+            <div class="action-btn">
+                <a class="btn btn-primary btn-sm  show-edit"
+                    href="{% url 'posts:post_edit' post.id %}?action=edit">Edit</a>
+                <a class="btn btn-primary btn-sm" aria-current="page" href="{% url 'posts:comment_create' post.id %}">
+                    Comment </a>
+
+                {% if request.user.is_superuser %}
+                <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
+                {% endif %}
+            </div>
+
+        </div>
         <div class="col-md-8 comments rounded">
             {% for comment in comments %}
-
+            <br />
             <p class="comment-text">
                 <span id="commenter">{{comment.name}}: </span> {{comment.comment}}
             </p>
@@ -34,6 +40,7 @@
                 <p class='comment'>comment</p>
             </a>
         </div>
+
 
 
     </div>
