added time to comments

--- a/posts/templates/posts/others.html
+++ b/posts/templates/posts/others.html
@@ -30,7 +30,7 @@
             <p class="comment-text">
                 <span id="commenter">{{comment.name}}: </span> {{comment.comment}}
             </p>
-
+            <p class="date-text">{{comment.created_at|date:'d M Y' }}</p>
             <hr />
             {% endfor %}
 
