--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -29,7 +29,7 @@
                             </p>
                         </a>
                         <p class="date-text"> {{post.created_at|date:'d M Y' }}</p>
-                        <div class="text-center">
+                        <div class="text-center profile">
                             <a class="btn btn-primary btn-sm" href=#>Comment</a>
 
                             <a class="card-link btn btn-primary btn-sm" href=#>&#9829;</a>
@@ -40,7 +40,7 @@
             </div>
             {% empty %}
             <div class="alert alert-warning">
-                No Posts Yet
+                Post Something!
             </div>
             {% endfor %}
         </div>
