--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -33,12 +33,10 @@
             <p class="comment-text">
                 <span id="commenter">{{comment.name}}: </span> {{comment.comment}}
             </p>
-
+            <p class="date-text">{{comment.created_at|date:'d M Y' }}</p>
             <hr />
             {% endfor %}
-            <a class="nav-link active" aria-current="page" href="{% url 'posts:comment_create' post.id %}">
-                <p class='comment'>comment</p>
-            </a>
+
         </div>
 
 
