--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -30,7 +30,8 @@
                         </a>
                         <p class="date-text"> {{post.created_at|date:'d M Y' }}</p>
                         <div class="text-center profile">
-                            <a class="btn btn-primary btn-sm" href=#>Comment</a>
+                            <a class="btn btn-primary btn-sm"
+                                href="{% url 'posts:comment_create' post.id %}">Comment</a>
 
                             <a class="card-link btn btn-primary btn-sm" href=#>&#9829;</a>
                         </div>
