--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -12,7 +12,10 @@
         <div class="col-md-4">
             <img src="{{post.image.url}}" class="index-image" />
             <div class="workout-show">
-                {{post.workout}}
+                <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
+                    <p class="text-capitalize">
+                        {{post.workout}}</p>
+                </a>
             </div>
 
             <div class="action-btn">
@@ -25,8 +28,8 @@
                 <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
                 {% endif %}
             </div>
-
         </div>
+
         <div class="col-md-8 comments rounded">
             {% for comment in comments %}
             <br />
@@ -35,8 +38,12 @@
             </p>
             <p class="date-text">{{comment.created_at|date:'d M Y' }}</p>
             <hr />
-            {% endfor %}
+            {% empty %}
 
+            <div class="alert alert-warning">
+                No Posts Yet
+            </div>
+            {% endfor %}
         </div>
 
 
