--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -44,6 +44,24 @@
                 No Posts Yet
             </div>
             {% endfor %}
+            {% comment %} <form action="{% url 'posts:post_like' post.id %}" method="post">
+                {% csrf_token %}
+                {%for field in like_form%}
+                <div class="row mb-3 comment-box">
+
+                    {{field.label_tag}}
+                    {{field}}
+                    <div class="text-danger">
+                        {{field.errors}}
+                        {{ form.non_field_errors }}
+                    </div>
+                    {% if field.help_text %}
+                    <p class="help">{{ field.help_text|safe }}</p>
+                    {% endif %}
+                </div>
+                {% endfor %}
+                <button class="btn btn-primary btn-sm">Like</button>
+            </form> {% endcomment %}
 
         </div>
     </div>
@@ -51,23 +69,5 @@
 
     {% endblock body %}
     {% block scripts %}
-    <div style="display:inline-block">
-        <label>liked</label>
-        <label class="switch">
-            <input type="checkbox" id="checkbox" value="{{like.liked}}">
-            <span class="slider round"></span>
-        </label>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script> <!-- Import Jquery Here-->
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#checkbox').change(function () {
-                $.post("/", {
-                    id: '{{post.id}}',
-                    liked: this.checked,
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
-                });
-            });
-        });
-    </script>
+
     {% endblock scripts %}
