--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -59,6 +59,17 @@ body {
     height: 40%;
 }
 
+.like-form {
+    text-align: end;
+    margin-top: -32px;
+    margin-right: -13px;
+}
+
+.comment-icon.link {
+    margin-left: 150px;
+    margin-top: 20px;
+}
+
 .username {
     margin-bottom: 0;
     font-size: 20px;
@@ -110,10 +121,18 @@ a {
 .logout,
 .like-icon,
 .profile-icon,
-.create-icon {
+.create-icon,
+.comment-icon {
     width: 22px;
 }
 
 .logo {
     width: 28px;
+}
+
+.footer {
+    margin-top: 5em;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
 }
