--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -62,9 +62,12 @@
 
         </div>
     </nav>
-    {% block body %}{% endblock body %}
+    {% block body %}
+    {% endblock body %}
+    {% block scripts %}
+    {% endblock scripts %}
 
-    {% block scripts %}{% endblock scripts %}
 </body>
+
 
 </html>
