--- a/posts/templates/posts/comments.html
+++ b/posts/templates/posts/comments.html
@@ -47,7 +47,7 @@
                         {% endif %}
                     </div>
                     {% endfor %}
-                    <button class="btn btn-primary btn-sm">Comment</button>
+                    <button type="submit" class="btn btn-primary btn-sm">Comment</button>
                 </form>
             </div>
         </div>
