--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="text-center">
-    <h1> {{user.username}} </h1>
+    <h1> {{user.username}}'s workouts </h1>
 </div>
 
 <div class="container">
