--- a/posts/templates/posts/likes.html
+++ b/posts/templates/posts/likes.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="text-center">
-    <h1> {{user.username}} </h1>
+    <h1> {{user.username}} Likes </h1>
 </div>
 <div class="col-md-9">
     <div class="row gy-2">
