--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -8,13 +8,10 @@
 <div class="container">
 
     <div class="col-md-9">
-        <div class="row ">
-
+        <div class="row gy-2">
             {% for post in posts %}
-
             <div class="col-md-4">
                 <div class="card">
-
 
                     {% if post.image  %}
                     <img src="{{post.image.url}}" class="index-image" />
