--- a/posts/templates/posts/index-old.html
+++ b/posts/templates/posts/index-old.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="col-md-9">
         <div class="row gy-2">
-            {% for post in page_obj %}
+            {% for post in posts %}
             <div class="col-md-4">
                 <div class="card">
                     <a class="index-user" aria-current="page"
@@ -67,23 +67,7 @@
                 No Posts Yet
             </div>
             {% endfor %}
-            <div class="pagination">
-                <span class="step-links">
-                    {% if page_obj.has_previous %}
-                    <a href="?page=1">&laquo; first</a>
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                    {% endif %}
 
-                    <span class="current">
-                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                    </span>
-
-                    {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">Next 8 </a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
-                    {% endif %}
-                </span>
-            </div>
 
 
             <div class="footer">
