--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,7 +1,5 @@
 {% extends 'posts/base.html' %}
-
 {% block body %}
-
 <div class="container">
     <div class="col-md-9">
         <div class="row gy-2">
@@ -75,7 +73,7 @@
                     {% endif %}
 
                     <span class="current">
-                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                     </span>
 
                     {% if page_obj.has_next %}
@@ -84,7 +82,6 @@
                     {% endif %}
                 </span>
             </div>
-
 
             <div class="footer">
                 <footer>
