--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -3,31 +3,32 @@
 
 {% block body %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <form action="{% url 'posts:post_create'%}" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {% for field in form %}
-                <div class="row mb-3">
-
-                    {{field.label_tag}}
-                    {{field}}
-                    <div class="text-danger">
-                        {{field.errors}}
-                        {{ form.non_field_errors }}
+    <div class="col-md-9">
+        <div class="row gy-2">
+            <div class="col-md-10">
+                <form action="{% url 'posts:post_create'%}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% for field in form %}
+                    <div class="row mb-4">
+                        {{field.label_tag}}
+                        {{field}}
+                        <div class="text-danger">
+                            {{field.errors}}
+                            {{ form.non_field_errors }}
+                        </div>
+                        {% if field.help_text %}
+                        <p class="help">{{ field.help_text|safe }}</p>
+                        {% endif %}
                     </div>
-                    {% if field.help_text %}
-                    <p class="help">{{ field.help_text|safe }}</p>
-                    {% endif %}
-                </div>
-                {% endfor %}
+                    {% endfor %}
 
-                <div class="form-row mt-3">
-                    <button type="submit" class="btn btn-primary">
-                        Add Post
-                    </button>
-                </div>
-            </form>
+                    <div class="form-row mt-2">
+                        <button type="submit" class="btn btn-primary">
+                            Add Post
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
