--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -87,7 +87,7 @@ a {
 }
 
 .col-md-8.comments,
-.col-md-4.comments {
+.col-md-5.comments {
     background-color: rgb(212, 246, 255);
     height: 500px;
     overflow: auto;
@@ -142,4 +142,16 @@ a {
     border-style: none;
     margin-top: 3px;
     margin-right: 5px;
+}
+
+.action-btn {
+    width: 50%;
+    margin-top: 1em;
+    margin-left: 91em;
+}
+
+.action-btn-others {
+    width: 50%;
+    margin-top: 1em;
+    margin-left: 95em;
 }
