--- a/posts/templates/posts/others.html
+++ b/posts/templates/posts/others.html
@@ -2,25 +2,21 @@
 
 {% block body %}
 <div class="text-center">
-    <a class="index-user" aria-current="page"
-        href="{% url 'accounts:other_profile_show' user_id=post.name_id %}">{{post.name}}
-    </a>
+    <h1> <a class="index-user" aria-current="page"
+            href="{% url 'accounts:other_profile_show' user_id=post.name_id %}">{{post.name}}
+        </a></h1>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-4">
             <img src="{{post.image.url}}" class="index-image" />
+            <br /> <br />
             <div class="workout-show">
-                {{post.workout}}
-            </div>
-
-            <div class="action-btn">
-                {% if request.user.is_superuser %}
-                <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
-                {% endif %}
-                <a class="btn btn-primary btn-sm" aria-current="page" href="{% url 'posts:comment_create' post.id %}">
-                    Comment </a>
+                <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
+                    <p class="text-capitalize">
+                        {{post.workout}}</p>
+                </a>
             </div>
         </div>
 
@@ -33,14 +29,21 @@
             <p class="date-text">{{comment.created_at|date:'d M Y' }}</p>
             <hr />
             {% empty %}
-
-            <div class="alert alert-warning">
-                No Comments
+            <br />
+            <div class="empty alert alert-light" role="alert">
+                No Comments Yet
             </div>
             {% endfor %}
-
         </div>
 
+        <div class="action-btn-others">
+            {% if request.user.is_superuser %}
+            <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
+            {% endif %}
+            <a class="btn btn-primary btn-sm comment" aria-current="page"
+                href="{% url 'posts:comment_create' post.id %}">
+                Comment </a>
+        </div>
 
     </div>
 </div>
