--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -1,32 +1,21 @@
 {% extends 'posts/base.html' %}
-
 {% block body %}
 <div class="text-center">
-    <a class="index-user" aria-current="page"
-        href="{% url 'accounts:other_profile_show' user_id=post.name_id %}">{{post.name}}
-    </a>
+    <h1> <a class="index-user" aria-current="page"
+            href="{% url 'accounts:other_profile_show' user_id=post.name_id %}">{{post.name}}
+        </a></h1>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-4">
             <img src="{{post.image.url}}" class="index-image" />
+            <br /><br />
             <div class="workout-show">
                 <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
                     <p class="text-capitalize">
                         {{post.workout}}</p>
                 </a>
-            </div>
-
-            <div class="action-btn">
-                <a class="btn btn-primary btn-sm  show-edit"
-                    href="{% url 'posts:post_edit' post.id %}?action=edit">Edit</a>
-                <a class="btn btn-primary btn-sm" aria-current="page" href="{% url 'posts:comment_create' post.id %}">
-                    Comment </a>
-
-                {% if request.user.is_superuser %}
-                <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
-                {% endif %}
             </div>
         </div>
 
@@ -37,18 +26,24 @@
                 <span id="commenter">{{comment.name}}: </span> {{comment.comment}}
             </p>
             <p class="date-text">{{comment.created_at|date:'d M Y' }}</p>
-
             <hr />
             {% empty %}
-
-            <div class="alert alert-warning">
-                No Posts Yet
+            <br />
+            <div class="empty alert alert-light" role="alert">
+                No Comments Yet
             </div>
             {% endfor %}
         </div>
 
-
-
+        <div class="action-btn">
+            <a class="btn btn-primary btn-sm  show-edit" href="{% url 'posts:post_edit' post.id %}?action=edit">Edit</a>
+            <a class="btn btn-primary btn-sm comment" aria-current="page"
+                href="{% url 'posts:comment_create' post.id %}">
+                Comment </a>
+            {% if request.user.is_superuser %}
+            <a href="{% url 'posts:post_show' post.id %}?action=del">Delete</a>
+            {% endif %}
+        </div>
     </div>
 
 
